Added directions for soup

--- a/recipe-page/index.html
+++ b/recipe-page/index.html
@@ -5,6 +5,39 @@
   </head>
 
   <body>
-   <h1>Food Wishes' Recipe for Minestrone</h1>
+   <h1>Food Wishes' Recipe for Minestrone Soup</h1>
+    <p><i>To be honest, I've never used this recipe, but I do enjoy minestrone soup; it's an easy way to get your veggies in for the day.</i></p>
+      <ul>
+          <li>3 oz pancetta</li>
+          <li>2 tbsp olive oil</li>
+          <li>1 diced onion</li>
+          <li>1 cup diced celery</li>
+          <li>4 minced garlic cloves</li>
+          <li>4 cups chicken broth</li>
+          <li>1 (28-oz) can plum tomatoes, crushed fine</li>
+          <li>2 cups water, plus more as needed</li>
+          <li>salt and pepper to taste</li>
+          <li>1 tsp dried Italian herb blend (mine was thyme, oregano, rosemary, basil)
+red pepper flakes to taste</li>
+          <li>1 cup freshly shucked cranberry beans (aka shelling beans)</li>
+          <li>2 or 3 cups chopped cabbage</li>
+          <li>1 (15-oz) can garbanzo beans, drained</li>
+          <li>1 bunch swiss chard, chopped</li>
+          <li>2/3 cup raw ditalini pasta
+          <li>extra virgin olive oil, Parmigiano-Reggiano, and fresh Italian parsley to garnish the top</li>
+      </ul>
+      <p><b>Recipe Instructions (It's an easy soup, so don't stress too much about it)</b></p>
+      <ol>
+        <li>Brown the pancetta in olive oil</li>
+        <li>Take out the pancetta</li>
+        <li>Brown the onions in the pancetta grease</li>
+        <li>Add celery, garlic cloves and seasonings</li>
+        <li>Add all legumes</li>
+        <li>Add tomatoes, water and broth</li>
+        <li>Let simmer for a reasonable amount of time</li>
+        <li>Add ditalini</li>
+        <li>Add greens when pasta is cooked through</li>
+        <li>Serve in cute bowls</li>
+      </ol>
   </body>
 </html>
