altered some text and some css

--- a/portfolio-bootstrap/about.html
+++ b/portfolio-bootstrap/about.html
@@ -43,13 +43,13 @@
             </a>
           </li>
           <li class="nav-item active px-lg-4">
-            <a class="nav-link text-uppercase text-expanded" href="about.html">About</a>
+            <a class="nav-link text-uppercase text-expanded" href="about.html">Experience</a>
           </li>
           <li class="nav-item px-lg-4">
-            <a class="nav-link text-uppercase text-expanded" href="products.html">Products</a>
+            <a class="nav-link text-uppercase text-expanded" href="products.html">Projects</a>
           </li>
           <li class="nav-item px-lg-4">
-            <a class="nav-link text-uppercase text-expanded" href="store.html">Store</a>
+            <a class="nav-link text-uppercase text-expanded" href="store.html">Hobbies</a>
           </li>
         </ul>
       </div>
@@ -64,11 +64,29 @@
           <div class="col-xl-9 col-lg-10 mx-auto">
             <div class="bg-faded rounded p-5">
               <h2 class="section-heading mb-4">
-                <span class="section-heading-upper">Strong Coffee, Strong Roots</span>
-                <span class="section-heading-lower">About Our Cafe</span>
+                <span class="section-heading-upper">Background</span>
+                <span class="section-heading-lower">Experience</span>
               </h2>
-              <p>Founded in 1987 by the Hernandez brothers, our establishment has been serving up rich coffee sourced from artisan farmers in various regions of South and Central America. We are dedicated to travelling the world, finding the best coffee, and bringing back to you here in our cafe.</p>
-              <p class="mb-0">We guarantee that you will fall in <em>lust</em> with our decadent blends the moment you walk inside until you finish your last sip. Join us for your daily routine, an outing with friends, or simply just to enjoy some alone time.</p>
+              <p>Software Engineering Apprentice, Techtonica, San Francisco, CA
+                -    Studying full-stack software engineering
+                -    Cycling through a through curriculum approved by companies such as Indeed, Google and Sysco Meraki 
+                -    Working on relevant web and mobile projects</p>
+              <p>Online Intern, Fleet Management Weekly, Manhattan Beach, CA
+                -    Wrote and posted news briefs using WordPress
+                -    Updated social media accounts 
+                -    Copy-edited news articles and opinion pieces</p>
+              <p>New Media Intern, San Francisco City Attorney’s Office
+                  -  Wrote articles on issues regarding the City Attorney’s office
+                  -  Designed pamphlets and wrote marketing literature 
+                  - Edited various campaign literature</p>
+                <p>Intern, The BizWorld Foundation, San Francisco, CA
+                  - Managed a comprehensive Raiser’s Edge database project
+                  - Maintained an impact data organization assessment
+                  </p>
+                  <p>Intern, Mondo Media, San Francisco, CA
+                    - Data tracking and maintenance
+                    - Reached out to various websites for marketing opportunities
+                    - Content monitor</p>
             </div>
           </div>
         </div>
@@ -78,7 +96,7 @@
 
   <footer class="footer text-faded text-center py-5">
     <div class="container">
-      <p class="m-0 small">Copyright &copy; Your Website 2019</p>
+      <p class="m-0 small">Copyright &copy; Yasmine Mahmoud 2019</p>
     </div>
   </footer>
 
