added changes to css and edited html text

--- a/portfolio-bootstrap/about.html
+++ b/portfolio-bootstrap/about.html
@@ -14,7 +14,9 @@
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
   <!-- Custom fonts for this template -->
-  <link href="https://fonts.googleapis.com/css?family=Raleway:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet">
+  <link
+    href="https://fonts.googleapis.com/css?family=Raleway:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i"
+    rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Lora:400,400i,700,700i" rel="stylesheet">
 
   <!-- Custom styles for this template -->
@@ -32,7 +34,8 @@
   <nav class="navbar navbar-expand-lg navbar-dark py-lg-4" id="mainNav">
     <div class="container">
       <a class="navbar-brand text-uppercase text-expanded font-weight-bold d-lg-none" href="#">Start Bootstrap</a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive"
+        aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarResponsive">
@@ -49,7 +52,7 @@
             <a class="nav-link text-uppercase text-expanded" href="products.html">Projects</a>
           </li>
           <li class="nav-item px-lg-4">
-            <a class="nav-link text-uppercase text-expanded" href="store.html">Hobbies</a>
+            <a class="nav-link text-uppercase text-expanded" href="store.html">Contact</a>
           </li>
         </ul>
       </div>
@@ -68,25 +71,25 @@
                 <span class="section-heading-lower">Experience</span>
               </h2>
               <p>Software Engineering Apprentice, Techtonica, San Francisco, CA
-                -    Studying full-stack software engineering
-                -    Cycling through a through curriculum approved by companies such as Indeed, Google and Sysco Meraki 
-                -    Working on relevant web and mobile projects</p>
+                - Studying full-stack software engineering
+                - Cycling through a through curriculum approved by companies such as Indeed, Google and Sysco Meraki
+                - Working on relevant web and mobile projects</p>
               <p>Online Intern, Fleet Management Weekly, Manhattan Beach, CA
-                -    Wrote and posted news briefs using WordPress
-                -    Updated social media accounts 
-                -    Copy-edited news articles and opinion pieces</p>
+                - Wrote and posted news briefs using WordPress
+                - Updated social media accounts
+                - Copy-edited news articles and opinion pieces</p>
               <p>New Media Intern, San Francisco City Attorney’s Office
-                  -  Wrote articles on issues regarding the City Attorney’s office
-                  -  Designed pamphlets and wrote marketing literature 
-                  - Edited various campaign literature</p>
-                <p>Intern, The BizWorld Foundation, San Francisco, CA
-                  - Managed a comprehensive Raiser’s Edge database project
-                  - Maintained an impact data organization assessment
-                  </p>
-                  <p>Intern, Mondo Media, San Francisco, CA
-                    - Data tracking and maintenance
-                    - Reached out to various websites for marketing opportunities
-                    - Content monitor</p>
+                - Wrote articles on issues regarding the City Attorney’s office
+                - Designed pamphlets and wrote marketing literature
+                - Edited various campaign literature</p>
+              <p>Intern, The BizWorld Foundation, San Francisco, CA
+                - Managed a comprehensive Raiser’s Edge database project
+                - Maintained an impact data organization assessment
+              </p>
+              <p>Intern, Mondo Media, San Francisco, CA
+                - Data tracking and maintenance
+                - Reached out to various websites for marketing opportunities
+                - Content monitor</p>
             </div>
           </div>
         </div>
