--- a/portfolio-bootstrap/index.html
+++ b/portfolio-bootstrap/index.html
@@ -14,7 +14,9 @@
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
   <!-- Custom fonts for this template -->
-  <link href="https://fonts.googleapis.com/css?family=Raleway:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet">
+  <link
+    href="https://fonts.googleapis.com/css?family=Raleway:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i"
+    rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Lora:400,400i,700,700i" rel="stylesheet">
 
   <!-- Custom styles for this template -->
@@ -33,7 +35,8 @@
   <nav class="navbar navbar-expand-lg navbar-dark py-lg-4" id="mainNav">
     <div class="container">
       <a class="navbar-brand text-uppercase text-expanded font-weight-bold d-lg-none" href="#">Start Bootstrap</a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive"
+        aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarResponsive">
@@ -50,7 +53,7 @@
             <a class="nav-link text-uppercase text-expanded" href="products.html">Projects</a>
           </li>
           <li class="nav-item px-lg-4">
-            <a class="nav-link text-uppercase text-expanded" href="store.html">Hobbies</a>
+            <a class="nav-link text-uppercase text-expanded" href="store.html">Contact</a>
           </li>
         </ul>
       </div>
@@ -66,30 +69,20 @@
             <span class="section-heading-upper">Software Engineering Apprentice</span>
             <span class="section-heading-lower">Yasmine Mahmoud</span>
           </h2>
-          <p class="mb-3">A goal-minded, analytical and passionate person who seeks to learn all she can. Transferrable skills and positive outlook. Excited to explore computer science without limitations.
+          <p class="mb-3">A goal-minded, analytical and passionate person who seeks to learn all she can. Transferrable
+            skills and positive outlook. Excited to explore computer science without limitations.
           </p>
           <div class="intro-button mx-auto">
-            <a class="btn btn-primary btn-xl" href="#">Click here to view LinkedIn page</a>
+            <a class="btn btn-primary btn-xl" href="https://www.linkedin.com/in/yasmine-mahmoud-3634a935/?trk=public_profile-settings_edit_profile_content">Click here to view LinkedIn page</a>
           </div>
         </div>
       </div>
     </div>
   </section>
-
-  <!-- <section class="page-section cta">
-    <div class="container">
-      <div class="row">
-        <div class="col-xl-9 mx-auto">
-          <div class="cta-inner text-center rounded">
-            <h2 class="section-heading mb-4">
-              <span class="section-heading-upper">Our Promise</span>
-              <span class="section-heading-lower">To You</span>
-            </h2>
-            <p class="mb-0">When you walk into our shop to start your day, we are dedicated to providing you with friendly service, a welcoming atmosphere, and above all else, excellent products made with the highest quality ingredients. If you are not satisfied, please let us know and we will do whatever we can to make things right!</p> -->
-          </div>
-        </div>
-      </div>
-    </div>
+  </div>
+  </div>
+  </div>
+  </div>
   </section>
 
   <footer class="footer text-faded text-center py-5">
