--- a/portfolio-bootstrap/store.html
+++ b/portfolio-bootstrap/store.html
@@ -82,7 +82,7 @@
               </ul>
               <p class="address mb-5">
                 <em>
-                  <strong>San Francisco</strong>
+                  <strong>San Francisco,</strong>
                   <br>
                   California
                 </em>
@@ -99,7 +99,7 @@
         </div>
       </div>
     </section>
-    
+
     <footer class="footer text-faded text-center py-5">
       <div class="container">
         <p class="m-0 small">Copyright &copy; Your Website 2018</p>
