added metatags to optimize SEO

--- a/portfolio-bootstrap/about.html
+++ b/portfolio-bootstrap/about.html
@@ -27,7 +27,7 @@
 <body>
 
   <h1 class="site-heading text-center text-white d-none d-lg-block">
-    <span class="site-heading-lower">Inquisitive + Inspired Individual</span>
+    <span class="site-heading-lower">Yasmine Mahmoud</span>
   </h1>
 
   <!-- Navigation -->
