--- a/portfolio-bootstrap/index.html
+++ b/portfolio-bootstrap/index.html
@@ -5,8 +5,17 @@
 
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <meta name="description" content="">
-  <meta name="author" content="">
+  <meta name="description" content="Yasmine Mahmoud Software Engineer">
+  <meta name="author" content="Yasmine Mahmoud Resume">
+  <meta name="title" content="Yasmine Mahmoud">
+  <meta name="description"
+    content="Yasmine Mahmoud is an inspired, inquisitive individual pursuing a career in cybersecurity through a software engineering apprenticeship at Techtonica.">
+  <meta name="keywords"
+    content="cybersecurity, software engineering, JavaScript, Python, CSS, HTML, computer science, resume, portfolio, Yasmine Mahmoud, software engineer portfolio">
+  <meta name="robots" content="index, follow">
+  <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+  <meta name="language" content="English">
+
 
   <title>Yasmine Mahmoud</title>
 
@@ -28,7 +37,7 @@
 
   <h1 class="site-heading text-center text-white d-none d-lg-block">
     <!-- <span class="site-heading-upper text-primary mb-3">A Free Bootstrap 4 Business Theme</span> -->
-    <span class="site-heading-lower">Inquisitive + Inspired Individual</span>
+    <span class="site-heading-lower">Yasmine Mahmoud</span>
   </h1>
 
   <!-- Navigation -->
@@ -66,14 +75,16 @@
         <img class="intro-img img-fluid mb-3 mb-lg-0 rounded" src="img/yasmineheadshot.png" alt="">
         <div class="intro-text left-0 text-center bg-faded p-5 rounded">
           <h2 class="section-heading mb-4">
-            <span class="section-heading-upper">Software Engineering Apprentice</span>
-            <span class="section-heading-lower">Yasmine Mahmoud</span>
+            <span class="section-heading-upper">Inspired + Inquisitive Individual</span>
+            <span class="section-heading-lower">Software Engineering Apprentice</span>
           </h2>
           <p class="mb-3">A goal-minded, analytical and passionate person who seeks to learn all she can. Transferrable
             skills and positive outlook. Excited to explore computer science without limitations.
           </p>
           <div class="intro-button mx-auto">
-            <a class="btn btn-primary btn-xl" href="https://www.linkedin.com/in/yasmine-mahmoud-3634a935/?trk=public_profile-settings_edit_profile_content">Click here to view LinkedIn page</a>
+            <a class="btn btn-primary btn-xl"
+              href="https://www.linkedin.com/in/yasmine-mahmoud-3634a935/?trk=public_profile-settings_edit_profile_content">Click
+              here to view LinkedIn page</a>
           </div>
         </div>
       </div>
