--- a/portfolio-bootstrap/store.html
+++ b/portfolio-bootstrap/store.html
@@ -25,7 +25,7 @@
   <body>
 
     <h1 class="site-heading text-center text-white d-none d-lg-block">
-      <span class="site-heading-lower">Inquisitive + Inspired Individual</span>
+      <span class="site-heading-lower">Yasmine Mahmoud</span>
     </h1>
 
     <!-- Navigation -->
@@ -63,7 +63,7 @@
             <div class="cta-inner text-center rounded">
               <h2 class="section-heading mb-5">
                 <span class="section-heading-upper">I make great conversation!</span>
-                <span class="section-heading-lower">Contact me</span>
+                <span class="section-heading-lower">Contact me:</span>
               </h2>
               <ul class="list-unstyled list-hours mb-5 text-left mx-auto">
                 <li class="list-unstyled-item list-hours-item d-flex">
@@ -102,7 +102,7 @@
 
     <footer class="footer text-faded text-center py-5">
       <div class="container">
-        <p class="m-0 small">Copyright &copy; Your Website 2018</p>
+        <p class="m-0 small">Copyright &copy; Yasmine Mamoud 2019</p>
       </div>
     </footer>
 
@@ -112,9 +112,9 @@
 
   </body>
 
-  <!-- Script to highlight the active date in the hours list -->
+  <!-- Script to highlight the active date in the hours list
   <script>
     $('.list-hours li').eq(new Date().getDay()).addClass('today');
-  </script>
+  </script> -->
 
 </html>
