"committing to github"

--- a/portfolio-bootstrap/about.html
+++ b/portfolio-bootstrap/about.html
@@ -5,8 +5,16 @@
 
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <meta name="description" content="">
-  <meta name="author" content="">
+  <meta name="description" content="Yasmine Mahmoud Portfolio">
+  <meta name="author" content="Yasmine Mahmoud Resume">
+  <meta name="title" content="Yasmine Mahmoud">
+  <meta name="description"
+    content="Yasmine Mahmoud is an inspired, inquisitive individual pursuing a career in cybersecurity through a software engineering apprenticeship at Techtonica.">
+  <meta name="keywords"
+    content="cybersecurity, software engineering, JavaScript, Python, CSS, HTML, computer science, resume, portfolio, Yasmine Mahmoud, software engineer portfolio">
+  <meta name="robots" content="index, follow">
+  <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+  <meta name="language" content="English">
 
   <title>Yasmine Mahmoud</title>
 
@@ -61,7 +69,7 @@
 
   <section class="page-section about-heading">
     <div class="container">
-      <img class="img-fluid rounded about-heading-img mb-3 mb-lg-0" src="img/bashimg.png" alt="">
+      <img class="img-fluid rounded about-heading-img mb-3 mb-lg-0" src="img/bashimg.png" alt="VSCode editor image">
       <div class="about-heading-content">
         <div class="row">
           <div class="col-xl-9 col-lg-10 mx-auto">
