--- a/portfolio-bootstrap/products.html
+++ b/portfolio-bootstrap/products.html
@@ -5,8 +5,16 @@
 
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <meta name="description" content="">
-  <meta name="author" content="">
+  <meta name="description" content="Yasmine Mahmoud Software Engineering Apprentice">
+  <meta name="author" content="Yasmine Mahmoud Resume">
+  <meta name="title" content="Yasmine Mahmoud">
+  <meta name="description"
+    content="Yasmine Mahmoud is an inspired, inquisitive individual pursuing a career in cybersecurity through a software engineering apprenticeship at Techtonica.">
+  <meta name="keywords"
+    content="cybersecurity, software engineering, JavaScript, Python, CSS, HTML, computer science, resume, portfolio, Yasmine Mahmoud, software engineer portfolio">
+  <meta name="robots" content="index, follow">
+  <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+  <meta name="language" content="English">
 
   <title>Yasmine Mahmoud</title>
 
@@ -70,11 +78,12 @@
             </h2>
           </div>
         </div>
-        <img class="product-item-img mx-auto d-flex rounded img-fluid mb-3 mb-lg-0" src="img/bashimg.png" alt="">
+        <img class="product-item-img mx-auto d-flex rounded img-fluid mb-3 mb-lg-0" src="img/bashimg.png" alt="VSCode editor image">
         <div class="product-item-description d-flex mr-auto">
           <div class="bg-faded p-5 rounded">
             <p class="mb-0">I'm excited for the learning opportunity I have with Techtonica and I'm building skills to
-              work on meaningful web and mobile projects. Check out my <a href="https://github.com/yhidad31">GitHub!</a></p>
+              work on meaningful web and mobile projects. Check out my <a href="https://github.com/yhidad31">GitHub!</a>
+            </p>
           </div>
         </div>
       </div>
