--- a/portfolio-bootstrap/index.html
+++ b/portfolio-bootstrap/index.html
@@ -72,7 +72,7 @@
   <section class="page-section clearfix">
     <div class="container">
       <div class="intro">
-        <img class="intro-img img-fluid mb-3 mb-lg-0 rounded" src="img/yasmineheadshot.png" alt="">
+        <img class="intro-img img-fluid mb-3 mb-lg-0 rounded" src="img/yasmineheadshot.png" alt="Yasmine Mahmoud's headshot">
         <div class="intro-text left-0 text-center bg-faded p-5 rounded">
           <h2 class="section-heading mb-4">
             <span class="section-heading-upper">Inspired + Inquisitive Individual</span>
