--- a/Event-Recommender-System/event.reco.html
+++ b/Event-Recommender-System/event.reco.html
@@ -4,10 +4,26 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Document</title>
+  <link rel="stylesheet" href="text.css">
+  <title>Event Recommender</title>
 </head>
-<body>
+<div style= "text-align: center"><h1 style="color: blueviolet; text-align:center">EVENTS 4 U</h1>
+<h2 style="color:blueviolet; text-align:center"><i>Find something to do, picked especially for you!</i></h2>
+<body style="background-color: seashell">
+   <a href="save-events.html" class="myButton">View all events</a>
+   <a href="add-delete.html" class="myButton">Filter Events that cath your interest</a>
+   <a href="add-delete-event.html" class="myButton">Add your name and save events</a>
+   <a href="#" class="myButton">Pick from events tailored to your budget</a>
+  </div>
+
+ 
   
-</body>
+<script src = jQuery-scripts.js></script>
+<script src ="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js">
+</script>
 <script src = event-reco-syst.js ></script>
+
+</body>
+
+
 </html>
